issue7082: OSX style issues in new UI - fix jumpy toggle sidebar button

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -258,6 +258,10 @@
     filter: url(resource://firebugui/filters.svg#brightenedGrayscale);
 }
 
+#fbToggleSidePanelsBox2 {
+    padding-bottom: 0;
+}
+
 /********************************************************************************************/
 /* Quick Info Box */
 
